webapp/guestbook/kube_deploy/guestbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: guestbook
  name: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: guestbook
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: guestbook
    spec:
      containers:
      - image: gb-image
        imagePullPolicy: IfNotPresent
        name: guestbook
        ports:
        - containerPort: 8090
        resources: {}
      hostname: guestbook
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
