webapp/guestbook/kube_deploy/guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: guestbook
  name: guestbook
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    io.kompose.service: guestbook
status:
  loadBalancer: {}
