webapp/guestbook/kube_deploy/backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: backend
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/backend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/backend: "true"
  policyTypes:
  - Ingress
